test_scores/negative_dimers/features/Q02156.pkl.xz
/g/alphafold/input_features/Homo_sapiens/features/Q02156.pkl.xz